x-overflow fix
asd

--- a/lessons.css
+++ b/lessons.css
@@ -5,13 +5,22 @@
 
 }
 
+.wrapper{
+    overflow-x: hidden;
+    max-width: 100%;
+}
 
 
+html{
+    overflow-x: hidden;
+    max-width: 100%;
+    scroll-snap-type: y mandatory;
+}
 body{
+    margin:0;
     background: linear-gradient(to right,#0B132B,#1C2541);
-    overflow-x: disabled;
-    margin-top: 0;
-    margin-left:0;
+    overflow-x: hidden;
+    max-width: 100%;
     font-family: Montserrat;
     display: inline-block;
 
@@ -20,14 +29,11 @@ body{
 #particles-js{
     z-index: -1;
     position:fixed; 
-    top: -5%;
+    top: 0%;
     width: 100%; 
     height: 100%; 
 } 
 
-html { /* body won't work ¯\_(ツ)_/¯ */
-    scroll-snap-type: y mandatory;
-  }
   
 h1{
     font-size: 60px;
@@ -42,7 +48,7 @@ section{
     justify-content: center;
     text-align: center;
     height: 100vh;
-    width: 100vw;
+    width: 90vw;
     scroll-snap-align: start;
   }
 #title{
